styled footer, don't know if the content overlap is fixed though

--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -1,18 +1,81 @@
-.footer-container {
+.footer__outerContainer {
+  width: 100vw;
+  background-color: var(--banner-color-accent);
+  color: rgb(245, 238, 229);  
+  padding: 3rem 0 3rem 0;
+}
+
+.footer__columnTitlesContainer {
   display: flex;
-  justify-content: space-around;
+  /* border: green solid; */
+  flex-flow: row;
+  justify-content: space-between;
 }
 
-.color {
-  background: #222222;
+.footer__columns {
+  /* border: turquoise solid;   */
+  padding-right: 10rem;
 }
 
-h4 {
-  color: #f9f4f4;
-  font-family: 'Roboto', sans-serif;
+.footer_columnsInfo {
+  margin-left: 1rem;
 }
 
-.footer p {
-  color: #c4b6b6;
-  font-family: 'Roboto', sans-serif;
+.footer__extraDiv {
+  height: 2px;
+  /* margin: 1rem; */
+  flex: 1 0;
+  /* border: solid rgb(10, 116, 209); */
+}
+
+.footer__bottomSection {
+  /* border: solid green; */
+  display: flex;
+  justify-content: space-between;
+  margin-top: 2rem;
+}
+
+.footer__bottomLinksSection {
+  display: flex;
+  flex-flow: row;
+  /* border: solid; */
+}
+
+.footer__copywriteSection {
+  /* border: solid blue; */
+  display: flex;
+  align-items: flex-end;
+  padding: 0;
+}
+
+.footer__socialLinks {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 3rem;
+}
+
+.Facebook {
+  background-color: var(--facebook);
+  height:3rem;
+  width: 3rem;
+  border-radius: 5px;
+}
+.Twitter {
+  background-color: var(--twitter);
+  height:3rem;
+  width: 3rem;
+  border-radius: 5px;
+}
+.Google {
+  background-color: var(--google);
+  height:3rem;
+  width: 3rem;
+  border-radius: 5px;
+}
+.Youtube {
+  background-color: var(--youtube);
+  height:3rem;
+  width: 3rem;
+  border-radius: 5px;
 }
